chore: more properties translation (70%)

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -78,50 +78,50 @@ ERROR_announcer_not_configured   = Announcer {} nebol nakonfigurovany
 
 assemblers.not.enabled                     = Assemblovanie nie je povolene. Skippuje sa
 assemblers.no.match                        = Ziadny assembler sa nezhoduje {}
-assemblers.distribution.not.configured     = Distribution {} nie je nakonfigurovany na assembling s {}
-assemblers.assemble.distribution.with      = Assembling {} distribution with {}
-assemblers.assemble.distribution.with.all  = Assembling {} distribution with all assemblers
-assemblers.assemble.all.distributions.with = Assembling all distributions with {}
-assemblers.assemble.all.distributions      = Assembling all distributions
-assemblers.distribution.skip               = skipping for {} distribution
-assemblers.distribution.assemble           = assembling {} distribution
-assemblers.assembler.excluded              = Assembler {}:{} was excluded. Skippuje sa
+assemblers.distribution.not.configured     = Distribution {} nie je nakonfigurovana na assembling s {}
+assemblers.assemble.distribution.with      = Assembluje sa {} distribucia s {}
+assemblers.assemble.distribution.with.all  = Assembluje sa {} distribucia so vsetkymi assemblermi
+assemblers.assemble.all.distributions.with = Assembluju sa vsetky distribucie s {}
+assemblers.assemble.all.distributions      = Assembluju sa vsetky distribucie
+assemblers.distribution.skip               = skippuje sa pre {} distribucie
+assemblers.distribution.assemble           = assumbluju sa {} distribucie
+assemblers.assembler.excluded              = Assembler {}:{} bol excludovany. Skippuje sa
 ERROR_unsupported_assembler                = Nepodporovany assembler {}
 
 ERROR_unexpected_error_changelog = Neocakavana chyba pri vytvarani changelogu
 ERROR_cannot_read_changelog      = Nemozno citat changelog z {}
 
 checksum.header                           = Kalkuluju sa checksums
-checksum.not.enabled                      = No files configured for checksum. Skippuje sa
+checksum.not.enabled                      = Ziadne subory nakonfigurovane pre checksum. Skippuje sa
 checksum.not.changed                      = Vsetky checksums su aktualne. Skippuje sa
 checksum.not.exist                        = checksum neexistuje: {}
 checksum.file.newer                       = {} je novsi ako {}
-checksum.reading                          = reading {}
+checksum.reading                          = citanie {}
 ERROR_unexpected_error_checksum           = Neocakavana chyba pri zapisovani checksums do {}
 ERROR_artifact_does_not_exist             = Artifact neexistuje. {}
 ERROR_unexpected_error_hash_read          = Neocakavana chyba pri citani hash z {}
 ERROR_unexpected_error_calculate_checksum = Neocakavana chyba pri kalkulovani checksum pre {}
 
-packagers.packager.excluded                = packager {} was excluded. Skipping
-distributions.distribution.excluded        = distribution {} was excluded. Skipping
-distributions.not.enabled                  = No active distributions for {}. Skipping
+packagers.packager.excluded                = packager {} bol vyluceny. Skippuje sa
+distributions.distribution.excluded        = distribution {} bol vyluceny. Skippuje sa
+distributions.not.enabled                  = Ziadne aktivne distribucie pre {}. Skippuje sa
 distributions.no.match                     = Distribution {} neexistuje
-distributions.apply.action                 = {} distributions
-distributions.apply.action.to              = - {} {} distribution
-distributions.skip.distribution            = skipping for {} distribution
-distributions.not.supported.distribution   = distribution {} with type {} is not supported. Skipping
-distributions.action.preparing.capitalize  = Preparing
-distributions.action.packaging.capitalize  = Packaging
-distributions.action.publishing.capitalize = Publishing
-distributions.action.preparing             = preparing
-distributions.action.packaging             = packaging
-distributions.action.publishing            = publishing
+distributions.apply.action                 = {} distribucie 
+distributions.apply.action.to              = - {} {} distribucie
+distributions.skip.distribution            = skippuje sa pre {} distribuciu
+distributions.not.supported.distribution   = distribution {} s typom {} nie je prodporovana. Skippuje sa
+distributions.action.preparing.capitalize  = Preparuje sa
+distributions.action.packaging.capitalize  = Packaguje sa
+distributions.action.publishing.capitalize = Publishuje sa
+distributions.action.preparing             = preparuje sa
+distributions.action.packaging             = packaguje sa
+distributions.action.publishing            = publishuje sa
 distributions.apply.action.distribution    = {} {} distribution
-distributions.failure                      = failure: {}
-distributions.previous.failure             = skipping due to previous failure
+distributions.failure                      = zlyhanie: {}
+distributions.previous.failure             = skippuje sa z dovodu predchadzajuceho zlyhania
 ERROR_unsupported_packager                 = Nepodporovany packager {}
 
-ERROR_releaser_no_match = No suitable git releaser has been configured
+ERROR_releaser_no_match = Ziadny vhodny git releaser bol nakonfigurovany
 
 signing.header                       = Signing suborov
 signing.not.enabled                  = Signing nieje povoleny. Skippuje sa
@@ -140,34 +140,34 @@ ERROR_public_key_not_found           = Nenasiel sa public key pre signing
 ERROR_password_incorrect             = Hesla sa nezhoduju
 
 uploaders.not.enabled               = Uploading nie je povoleny. Skippuje sa
-uploaders.no.match                  = No uploaders match {}
+uploaders.no.match                  = Ziadny uploaders zhoda {}
 uploaders.uploader.not.configured   = Uploader {}/{} nie je nakonfigurovany
 uploaders.uploader.not.configured2  = Uploader {} nie je nakonfigurovany
-uploaders.upload.with               = Uploading with {}/{}
-uploaders.upload.all.artifacts.with = Uploading all artifacts with {}
-uploaders.upload.all.artifacts.to   = Uploading all artifacts to {}
-uploaders.upload.all.artifacts      = Uploading all artifacts
-uploaders.skip.upload               = skipping upload for {}
-uploaders.upload.to                 = uploading to {}
-uploaders.uploader.excluded         = Uploader {}:{} was excluded. Skipping
-uploaders.uploader.disabled         = Uploader {}:{} is not enabled. Skipping
-ERROR_unsupported_uploader          = Unsupported uploader {}
+uploaders.upload.with               = Uploading spolu s {}/{}
+uploaders.upload.all.artifacts.with = Uploading vsetky artifacts spolu s {}
+uploaders.upload.all.artifacts.to   = Uploading vsetky artifacts do {}
+uploaders.upload.all.artifacts      = Uploading vsetky artifacts
+uploaders.skip.upload               = skippuje sa upload pre {}
+uploaders.upload.to                 = uploading do {}
+uploaders.uploader.excluded         = Uploader {}:{} bol vyluceny. Skippuje sa
+uploaders.uploader.disabled         = Uploader {}:{} nie je povoleny. Skippuje sa
+ERROR_unsupported_uploader          = Nepodporovany uploader {}
 
 downloaders.not.enabled                 = Stahovanie nie je povolene. Skippuje sa
-downloaders.no.match                    = No downloaders match {}
-downloaders.downloader.not.configured   = Downloader {}/{} is not configured
-downloaders.downloader.not.configured2  = Downloader {} is not configured
-downloaders.download.with               = Downloading with {}/{}
-downloaders.download.all.artifacts.with = Downloading all artifacts with {}
-downloaders.download.all.artifacts.from = Downloading all artifacts from {}
-downloaders.download.all.artifacts      = Downloading all artifacts
-downloaders.skip.download               = skipping download for {}
-downloaders.download                    = downloading {}
-downloaders.downloader.excluded         = Downloader {}:{} was excluded. Skipping
-downloaders.downloader.disabled         = Downloader {}:{} is not enabled. Skipping
-ERROR_unsupported_downloader            = Unsupported downloader {}
+downloaders.no.match                    = Ziadna downloaders zhoda {}
+downloaders.downloader.not.configured   = Downloader {}/{} nie je nakonfigurovany
+downloaders.downloader.not.configured2  = Downloader {} nie je nakonfigurovany
+downloaders.download.with               = Downloaduju sa spolu s {}/{}
+downloaders.download.all.artifacts.with = Downloaduju sa vsetky artifacts spolu s {}
+downloaders.download.all.artifacts.from = Downloaduju sa vsetky artifacts z {}
+downloaders.download.all.artifacts      = Downloaduju sa vsetky artifacts
+downloaders.skip.download               = skippuje sa download pre {}
+downloaders.download                    = downloaduje sa {}
+downloaders.downloader.excluded         = Downloader {}:{} bol vyluceny. Skippuje sa
+downloaders.downloader.disabled         = Downloader {}:{} nie je povoleny. Skippuje sa
+ERROR_unsupported_downloader            = Nepodporovany downloader {}
 
-packager.publish.snapshot.not.supported = publication of snapshots is not allowed. Skipping.
+packager.publish.snapshot.not.supported = publication of snapshots is not allowed. Skippuje sa.
 packager.create.properties              = creating props for {}/{}
 packager.skip.distribution              = skipping {} distribution
 ERROR_copy_files_from_to                = Could not copy files from {} to {}
@@ -249,24 +249,24 @@ assembler.jpackage.type                    = packaging as {}
 ERROR_jpackage_minimum_jdk_required        = jpackager requires JDK 16 as a minimum. JDK version is {}
 ERROR_jpackage_runtime_image_not_found     = Could not find a runtime image matching {}
 
-ERROR_invalid_config_file       = Invalid config file. {}
-ERROR_parsing_config_file       = Unexpected error parsing config file. {}
-ERROR_load_resource             = Unexpected error loading resource. {}
-ERROR_unsupported_config_format = Unsupported config format. {}
+ERROR_invalid_config_file       = Neplatny config subor. {}
+ERROR_parsing_config_file       = Neocakavana chyba pri parsovani config suboru. {}
+ERROR_load_resource             = Neocakavana chyba pri nacitani resource. {}
+ERROR_unsupported_config_format = Nepodporovany config format. {}
 
-releaser.tag.and.release.skipped = Release and tag are skipped
+releaser.tag.and.release.skipped = Release a tag sa skippuju
 
-artifacts.not.exists                     = Artifact does not exist: {}
-artifacts.newer                          = {} is newer than {}
-ERROR_artifacts_unexpected_error_copying = Unexpected error copying {} to {}
-ERROR_artifacts_glob_missing_input       = Input does not exist: {}
-ERROR_artifacts_glob_resolution          = Some globs failed to be resolved
-ERROR_artifacts_unexpected_error_globs   = Unexpected error when resolving globs
-ERROR_artifacts_unexpected_error_path    = Unexpected error visiting path {}
-ERROR_artifacts_download_url_missing     = cannot resolve downloadUrl for {}. Using default settings from {}
+artifacts.not.exists                     = Artifact neexistuje: {}
+artifacts.newer                          = {} je novsi ako {}
+ERROR_artifacts_unexpected_error_copying = Neocakavana chyba pri kopirovani {} do {}
+ERROR_artifacts_glob_missing_input       = Vstup neexistuje: {}
+ERROR_artifacts_glob_resolution          = Niektore globs sa nepodarilo resolvnut
+ERROR_artifacts_unexpected_error_globs   = Neocakavana chyba pri resolvovani globs
+ERROR_artifacts_unexpected_error_path    = Neocakavana chyba pri visiting path {}
+ERROR_artifacts_download_url_missing     = nemozno resolvnut downloadUrl pre {}. Pouzitie predvolenych nastaveni z {}
 
-validation_multiple_primary_screenshots  = There's more than 1 primary screenshot in {}
-validation_java_home_missing             = Java home could not be found
+validation_multiple_primary_screenshots  = Obsahuje viac ako 1 primary screenshot v {}
+validation_java_home_missing             = Java home sa nepodarilo najst
 validation_s3_missing_download_url       = {} defines a custom endpoint but no downloadUrl
 validation_gitlab_non_matching_uploader  = Uploader {}:{} is not configured
 validation_artifactory_disabled_repositories = {} has no active repositories
@@ -363,7 +363,7 @@ validation_skdman_disable                = There are no active distributions. Di
 # do not translate sdkman.candidate
 validation_sdkman_multiple_definition    = sdkman.candidate {} is defined for more than one distribution: {}
 # do not translate slack.token, slack.webhook
-validation_slack_token                   = slack.token or slack.webhook must be provided
+validation_slack_token                   = slack.token alebo slack.webhook musia byt poskytnute
 
 default.discussion.title = {{projectNameCapitalized}} {{projectVersion}} released!
 default.release.message  = 🚀 {{projectNameCapitalized}} {{projectVersion}} has been released! {{releaseNotesUrl}}
@@ -373,8 +373,8 @@ default.category.bug.fix = 🐛 Bug Fixes
 ERROR_path_does_not_exist               = Path neexisujte {}
 ERROR_unexpected_error_reading_template = Neocakavana chyba pri citani template {}
 ERROR_packager_name_not_blank           = Packager name must not be blank
-ERROR_packager_not_configured           = Packager {} has not been configured
-ERROR_packager_not_supported            = Packager {} is not supported
+ERROR_packager_not_configured           = Packager {} nebol nakonfigurovany
+ERROR_packager_not_supported            = Packager {} nie je prodporovany
 
 environment.load.variables           = Loading variables from {}
 environment.variables.load.error     = Could not load variables from {}
@@ -454,7 +454,7 @@ workflow.excluded.downloader.types = Excluded downloaders by type: {}
 workflow.included.downloader.names = Included downloaders by name: {}
 workflow.excluded.downloader.names = Excluded downloaders by name: {}
 
-ERROR_unexpected_article_announcer   = Unexpected error when preparing {}
+ERROR_unexpected_article_announcer   = Neocakavana chyba pri priprave {}
 # no not translate article
 announcer.article.resolve.templates  = resolving templates for article announcer
 announcer.article.eval.template      = evaluating template {}
@@ -471,14 +471,14 @@ ERROR_unexpected_repository_update   = Unexpected error updating {}
 repository.copy.files                = copying files from {}
 ERROR_repository_copy_files          = Could not copy files from {}
 
-uploader.uploading.to          = nahrava sa na {}
-downloader.unpack              = rozbaluje sa {}
-ERROR_login                    = Invalid credentials
-ERROR_disconnect               = Unexpected error when disconnecting from {}
-ERROR_ssh_mkdir                = Unexpected error when creating path {}
-ERROR_unexpected_download_from = Unexpected error when downloading from {}
-ERROR_unexpected_download      = Unexpected error when downloading {}
-ERROR_download_url_unpack      = Unexpected error when unpacking {}
+uploader.uploading.to          = uploaduje sa na {}
+downloader.unpack              = unpackuje sa {}
+ERROR_login                    = Neplatne credentials
+ERROR_disconnect               = Neocakavana chyba pri disconnectingu z {}
+ERROR_ssh_mkdir                = Neocakavana chyba pri vytvarani path {}
+ERROR_unexpected_download_from = Neocakavana chyba pri stahovani z {}
+ERROR_unexpected_download      = Neocakavana chyba pri stahovani {}
+ERROR_download_url_unpack      = Neocakavana chyba pri unpackingu {}
 
 artifacts.no.match         = No matching artifacts. Skipping
 ERROR_unexpected_upload    = Unexpected error when uploading {}
@@ -558,7 +558,7 @@ git.releaser.release.update.body        = aktualizuje sa release body
 git.releaser.release.not.found          = release {} neexistuje
 git.releaser.user.not.found             = Could not find user matching {}
 git.releaser.repository.tag             = tagging local repository with {}
-github.generate.release.notes           = Generating release notes on {}/{} for {}..{}
+github.generate.release.notes           = Generuju sa release notes na {}/{} pre {}..{}
 ERROR_git_repository_not_exists         = Repository '{}' neexistuje
 ERROR_git_tag_not_exists                = Tag '{}' neexistuje
 ERROR_git_release_branch_not_exists     = Nerozpoznana branch '{}'. Dostupne branche su: {}
