--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -289,7 +289,7 @@ validation_multiple_assemblers           = {} has more than 1 assembler: {}
 validation_chocolatey_package_version    = Invalid chocolatey package version {}. Follow SemVer with optional .number or .yyyyMMdd as tag
 validation_brew_multiple_artifact        = {} has more than one {} artifact
 validation_brew_single_artifact          = {} can only have a single matching .dmg, .pkg, or .zip artifact
-validation_brew_duplicate_definition     = {} is defined for more than one distribution: {}
+validation_brew_duplicate_definition     = {} je definovany pre viac ako jednu distribution: {}
 # do not translate .buildOn
 validation_snap_missing_buildon          = {}[{}].buildOn must define at least one entry
 validation_packager_multiple_artifacts   = {} has more than one artifact that may be packaged
@@ -484,7 +484,7 @@ artifacts.no.match         = No matching artifacts. Skipping
 ERROR_unexpected_upload    = Unexpected error when uploading {}
 ERROR_unexpected_upload_to = Unexpected error when uploading to {}
 generic.git.warning        = Releasing to a generic Git repository is not supported
-changelog.disabled                      = Changelog is not enabled. Skipping
+changelog.disabled                      = Changelog nie je povoleny. Skippuje sa
 changelog.generator.resolve.commits     = resolving commits
 changelog.generator.sort.commits        = sorting commits {}
 changelog.generator.lookup.tag          = looking for tag that matches '{}'
@@ -495,93 +495,93 @@ changelog.generator.tag.found           = najdeny tag {}
 changelog.generator.generate            = Generuje sa changelog: {}
 changelog.generator.read                = Cita sa changelog z {}
 ERROR_changelog_not_exist               = Changelog {} neexistuje
-ERROR_git_repository_remote             = repository doesn't have a remote named '{}'
-ERROR_git_repository_remote_missing_url = {} remote does not have a configured URL
-ERROR_git_repository_remote_url_parse   = Unparseable remote URL {}
+ERROR_git_repository_remote             = repository nema remote s menom '{}'
+ERROR_git_repository_remote_missing_url = {} remote nema nakonfigurovanu URL
+ERROR_git_repository_remote_url_parse   = Neparsovatelna remote URL {}
 # do not translate origin
-ERROR_git_repository_origin_remote      = Nepodarilo sa urcite 'origin' remote
-ERROR_git_repository_list_local_branch  = Could not list local branches
-ERROR_git_delete_tag                    = Could not delete tag {}
-ERROR_git_find_tag                      = Could not find tag {}
-ERROR_git_create_tag                    = Could not create tag {}
-git.tag                                 = Tagging {}
-git.tag.lookup                          = looking up tag {}
-git.tag.exists                          = tag {} exists
-git.tag.release                         = tagging release {}
-ERROR_git_release_existing_tag          = Release failed because tag {} already exists. overwrite = false
-git.tag.not.exist                       = tag {} does not exist
-git.push.release                        = pushing to {}
-git.push.tag                            = pushing tag to remote, dryrun = {}
-git.repository.lookup                   = lookup repository {}/{}
-git.repository.create                   = creating repository {}/{}
-git.milestone.lookup                    = lookup milestone '{}' on {}/{}
-git.milestone.close                     = closing milestone '{}' on {}/{}
-git.project.create                      = creating project {}/{}
-git.fetch.current.user                  = fetching current user
-git.fetch.gitlab.project_by_id          = fetching project with GitLab id {}
-git.fetch.gitlab.project.by.user        = fetching project {} for user {} ({})
-ERROR_project_not_exist                 = Project {} does not exist or it's not visible
-git.gitlab.project.found                = found {} (ID: {})
-git.list.releases                       = fetching all releases on {}/{}
-git.list.branches                       = fetching all branches on {}/{}
-git.list.assets.github                  = fetching all assets on {}/{} and release {}
-git.fetch.release.by.tag                = fetching release on {}/{} with tag {}
-git.fetch.release.on.tag                = fetching release on {} with tag {}
-git.delete.tag.from                     = deleting tag {} from {}/{}
+ERROR_git_repository_origin_remote      = Nepodarilo sa urcit 'origin' remote
+ERROR_git_repository_list_local_branch  = Nepodarilo sa vylistovat lokalne branches
+ERROR_git_delete_tag                    = Nepodarilo sa vymazat tag {}
+ERROR_git_find_tag                      = Nepodarilo sa najst tag {}
+ERROR_git_create_tag                    = Nepodarilo sa vytvorit tag {}
+git.tag                                 = Tagguje sa {}
+git.tag.lookup                          = vyhladava sa tag {}
+git.tag.exists                          = tag {} existuje
+git.tag.release                         = tagguje sa release {}
+ERROR_git_release_existing_tag          = Release zlyhal pretoze tag {} uz existuje. overwrite = false
+git.tag.not.exist                       = tag {} neexsituje
+git.push.release                        = pushuje sa do {}
+git.push.tag                            = pushuje sa tag do remote, dryrun = {}
+git.repository.lookup                   = vyhladava sa repository {}/{}
+git.repository.create                   = vytvara sa repository {}/{}
+git.milestone.lookup                    = vyhladava sa milestone '{}' na {}/{}
+git.milestone.close                     = zatvara sa milestone '{}' na {}/{}
+git.project.create                      = vytvorenie projektu {}/{}
+git.fetch.current.user                  = fetchuje sa current user
+git.fetch.gitlab.project_by_id          = fetchuje sa project s GitLab id {}
+git.fetch.gitlab.project.by.user        = fetchuje sa project {} pre usera {} ({})
+ERROR_project_not_exist                 = Project {} neexistuje alebo nie je visible
+git.gitlab.project.found                = najdene {} (ID: {})
+git.list.releases                       = fetchuju sa vsetky releases na {}/{}
+git.list.branches                       = fetchuju sa vsetky branches na {}/{}
+git.list.assets.github                  = fetchuju sa vsetk assets na {}/{} a release {}
+git.fetch.release.by.tag                = fetchuju sa release na {}/{} s taggom {}
+git.fetch.release.on.tag                = fetchuju sa release z {} s taggom {}
+git.delete.tag.from                     = vymazuje sa tag {} z {}/{}
 git.delete.tag.from.repository          = vymazuje sa tag {} z {}
 git.delete.release.from                 = vymazuje sa release {} z {}/{}
 git.delete.release.from.id              = vymazuje sa release {} z {}/{} ({})
-git.create.release                      = creating release on {}/{} with tag {}
-git.create.release.repository           = creating release on {} with tag {}
-git.update.release                      = updating release on {}/{} with tag {}
-git.upload.assets                       = uploading assets to {}/{}
+git.create.release                      = vytvaraju sa release na {}/{} s taggom {}
+git.create.release.repository           = vytvaraju sa release na {} s taggom {}
+git.update.release                      = updatuju sa release na {}/{} s taggom {}
+git.upload.assets                       = uploaduju sa assets do {}/{}
 git.upload.asset                        = - nahrava sa {}
-git.upload.asset.failure                = x failed to upload {}
+git.upload.asset.failure                = x nepodarilo sa uploadnut {}
 git.delete.asset                        = - vymazuje sa {}
-git.delete.asset.failure                = x failed to delete {}
+git.delete.asset.failure                = x nepodarilo sa odstranit {}
 git.update.asset                        = - aktualizuje sa {}
-git.update.asset.failure                = x failed to update {}
-git.upload.asset.links                  = linking assets to {}/{} with tag {}
-git.upload.asset.link                   = - linking {}
-git.upload.asset.link.failure           = x failed to link {}
-git.user.lookup                         = looking up user for {} <{}>
-ERROR_git_organization_not_exist        = Organization {} does not exist
-ERROR_git_team_not_exist                = Team {} does not exist
-git.releaser.releasing                  = Releasing to {}
-git.releaser.release.lookup             = looking up release with tag {} at repository {}
+git.update.asset.failure                = x nepodarilo sa aktualizovat {}
+git.upload.asset.links                  = prepajaju sa assety do {}/{} s taggom {}
+git.upload.asset.link                   = - prepaja sa {}
+git.upload.asset.link.failure           = x nepodarilo sa prepojit {}
+git.user.lookup                         = hlada sa user pre {} <{}>
+ERROR_git_organization_not_exist        = Organization {} neexistuje
+ERROR_git_team_not_exist                = Team {} neexistuje
+git.releaser.releasing                  = Releasuje sa do {}
+git.releaser.release.lookup             = hlada sa release s taggom {} v repository {}
 git.releaser.release.exists             = release {} existuje
 git.releaser.release.delete             = vymazuje sa release {}
 git.releaser.release.create             = vytvara sa release {}
 git.releaser.release.update             = aktualizuje sa release {}
-git.releaser.release.update.title       = aktualizuje sa release title to {}
+git.releaser.release.update.title       = aktualizuje sa release title na {}
 git.releaser.release.update.body        = aktualizuje sa release body
 git.releaser.release.not.found          = release {} neexistuje
 git.releaser.user.not.found             = Could not find user matching {}
-git.releaser.repository.tag             = tagging local repository with {}
+git.releaser.repository.tag             = tagguje sa local repository s {}
 github.generate.release.notes           = Generuju sa release notes na {}/{} pre {}..{}
 ERROR_git_repository_not_exists         = Repository '{}' neexistuje
 ERROR_git_tag_not_exists                = Tag '{}' neexistuje
 ERROR_git_release_branch_not_exists     = Nerozpoznana branch '{}'. Dostupne branche su: {}
-ERROR_git_releaser_cannot_release       = {} release failed because release {} already exists. overwrite = false; update = false
-git.releaser.link.discussion            = linking release {} with discussion {}
-git.releaser.link.discussion.error      = Could not update release {} with discussion category {}
-ERROR_git_discussion_duplicate          = A discussion titled "{}" has already been posted to {}/{}
-warn_ssl_disabled                       = ** SSL VALIDATION IS DISABLED. CONTINUE AT YOUR OWN RISK **
-warn_ssh_disabled                       = ** SSH HOST VERIFICATION IS DISABLED. CONTINUE AT YOUR OWN RISK **
+ERROR_git_releaser_cannot_release       = {} release zlyhal pretoze release {} uz existuje. overwrite = false; update = false
+git.releaser.link.discussion            = prepaja sa release {} s discussion {}
+git.releaser.link.discussion.error      = Nepodarilo sa aktualizovat release {} s discussion kategoriou {}
+ERROR_git_discussion_duplicate          = Diskusia s title "{}" uz bola posted na {}/{}
+warn_ssl_disabled                       = ** SSL VALIDACIA JE DISABLED. POKRACUJTE LEN NA VLASTNE RIZIKO **
+warn_ssh_disabled                       = ** SSH HOST VERIFIKACIA JE DISABLED. POKRACUJTE LEN NA VLASTNE RIZIKO **
 webhook.connection.open                 = otvara sa pripojenie
 webhook.connection.configure            = konfiguruje sa pripojenie
-webhook.message.send                    = sending message
+webhook.message.send                    = odosiela sa message
 webhook.data.send                       = odosielaju sa data
 webhook.response.handle                 = spracuvava sa response
 sdk.operation.failed                    = {} operacia zlyhala
 sdkman.release.announce                 = announcing {} release of '{}' candidate
 ERROR_sdkman_announce                   = Failed to announce some candidates
-sdkman.no.suitable.artifacts            = No suitable artifacts were found. Skipping
-sdkman.release.announce.major           = Announcing major release of '{}' candidate
-sdkman.release.announce.minor           = Announcing minor release of '{}' candidate
+sdkman.no.suitable.artifacts            = Ziadne vhodne artifacts neboli najdene. Skippuje sa
+sdkman.release.announce.major           = Announcuje sa major release of '{}' candidate
+sdkman.release.announce.minor           = Announcuje sa minor release of '{}' candidate
 twitter.tweet                           = posielam tweet: {}
-twitter.tweet.size                      = status is {} chars long
-ERROR_unexpected_json_format            = Unexpected error formatting message as JSON
+twitter.tweet.size                      = status je {} chars dlhy
+ERROR_unexpected_json_format            = Neocakavana chyba pri formatovani message ako JSON
 mail.message.send                       = Odosiela sa e-mail announcement
 s3.bucket.check                         = kontroluje sa ci bucket {} existuje
 s3.bucket.create                        = vytvara sa bucket {}
@@ -591,9 +591,9 @@ s3.object.write                         = zapisuje sa s3://{}/{}
 s3.object.acl                           = pridava sa READ permission do s3://{}/{}
 ERROR_unexpected_s3_client_config       = Chyba pri buildovani AWS S3 clienta
 
-disco.fetch.packages                    = dotahuju sa balicky s {}
-disco.fetch.package                     = dotahuju sa balicky {}
-disco.multiple.packages                 = Disco returned {} package(s)
+disco.fetch.packages                    = dotahuju sa packages s {}
+disco.fetch.package                     = dotahuju sa packages {}
+disco.multiple.packages                 = Disco vratilo {} package(s)
 disco.package.not.downloadable          = {} nieje mozne stiahnut priamo
-ERROR_disco_resolve_package             = Disco returned no results: {}
-ERROR_disco_resolve_pkg                 = Disco returned no result for ephemeralId {}
+ERROR_disco_resolve_package             = Disco nevratilo ziadne vysledky: {}
+ERROR_disco_resolve_pkg                 = Disco nevartilo ziadne vysledky pre ephemeralId {}
