chore: added more properties translations

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -416,60 +416,60 @@ templates.create.directory        = Creating output directory {}
 templates.writing.file            = Writing file {}
 templates.file_exists.error       = File {} already exists and overwrite was set to false
 # do not translate distributionType, distributionName, toolName
-ERROR_unexpected_template_fail    = Unexpected error when generating template. distributionType={}, distributionName={}, toolName={}
+ERROR_unexpected_template_fail    = Neocakavana chyba pri generovani template. distributionType={}, distributionName={}, toolName={}
 
-ERROR_environment_property_check  = {} must not be blank. Configure a value using the {}, or define a {} environment variable, or define a key/value pair in {} with key = {}
-ERROR_environment_property_check2 = {} must not be blank. Configure a value using the {}, or define {} environment variables, or define a key/value pair in {} with keys = {}
-ERROR_files_unpack_outside_target = Entry is outside of the target dir: {}
-ERROR_files_unpack_fail_dir       = failed to create directory {}
-ERROR_files_copy                  = Unable to copy: {}
-ERROR_files_create                = Unable to create: {}
-ERROR_files_cycle                 = Cycle detected: {}
-ERROR_files_copy_attributes       = Unable to copy all attributes to: {}
-ERROR_mustache_write_value        = Failed to write value:
-ERROR_invalid_file_input          = Input {} is not a File, Path, nor CharSequence.
-ERROR_unexpected_file_read        = Unexpected error when reading file {}
-files.copy                        = copying files from {} to {}
+ERROR_environment_property_check  = {} nesmie byt blank. Nakonfigurujte hodnotu pomocou {}, or define a {} environment variable, or define a key/value pair in {} with key = {}
+ERROR_environment_property_check2 = {} nesmie byt blank. Nakonfigurujte hodnotu pomocou {}, or define {} environment variables, or define a key/value pair in {} with keys = {}
+ERROR_files_unpack_outside_target = Entry je mimo cielovej dir: {}
+ERROR_files_unpack_fail_dir       = nepodarilo sa vytvorit directory {}
+ERROR_files_copy                  = Nesa sa skopirovat: {}
+ERROR_files_create                = Neda sa vytvorit: {}
+ERROR_files_cycle                 = Zistil sa cyklys: {}
+ERROR_files_copy_attributes       = Nieje mozne skopirovat vsetky atributy do: {}
+ERROR_mustache_write_value        = Hodnotu sa nepodarilo zapisat:
+ERROR_invalid_file_input          = Input {} nie je File, Path, alebo CharSequence.
+ERROR_unexpected_file_read        = Neocakavana chyba pri citani suboru {}
+files.copy                        = kopirovanie suborov z {} do {}
 
-ERROR_unexpected_release_announce  = Unexpected error when announcing release
-ERROR_unexpected_release_create    = Unexpected error when creating release
-ERROR_unexpected_release_sign      = Unexpected error when signing release
-workflow.dryrun                    = dry-run set to {}
-workflow.success                   = JReleaser succeeded after {}
-workflow.failure                   = JReleaser failed after {}
-workflow.included.announcers       = Included announcers: {}
-workflow.excluded.announcers       = Excluded announcers: {}
-workflow.included.assemblers       = Included assemblers: {}
-workflow.excluded.assemblers       = Excluded assemblers: {}
-workflow.included.distributions    = Included distributions: {}
-workflow.excluded.distributions    = Excluded distributions: {}
-workflow.included.packagers        = Included packagers: {}
-workflow.excluded.packagers        = Excluded packagers: {}
-workflow.included.uploader.types   = Included uploaders by type: {}
-workflow.excluded.uploader.types   = Excluded uploaders by type: {}
-workflow.included.uploader.names   = Included uploaders by name: {}
-workflow.excluded.uploader.names   = Excluded uploaders by name: {}
-workflow.included.downloader.types = Included downloaders by type: {}
-workflow.excluded.downloader.types = Excluded downloaders by type: {}
-workflow.included.downloader.names = Included downloaders by name: {}
-workflow.excluded.downloader.names = Excluded downloaders by name: {}
+ERROR_unexpected_release_announce  = Neocakavana chyba pri announcing release
+ERROR_unexpected_release_create    = Neocakavana chyba pri creating release
+ERROR_unexpected_release_sign      = Neocakavana chyba pri signing release
+workflow.dryrun                    = dry-run nastaveny na {}
+workflow.success                   = JReleaser uspel po {}
+workflow.failure                   = JReleaser zlyhal po {}
+workflow.included.announcers       = Includovane announcers: {}
+workflow.excluded.announcers       = Excludovane announcers: {}
+workflow.included.assemblers       = Includovane assemblers: {}
+workflow.excluded.assemblers       = Excludovane assemblers: {}
+workflow.included.distributions    = Includovane distributions: {}
+workflow.excluded.distributions    = Excludovane distributions: {}
+workflow.included.packagers        = Includovane packagers: {}
+workflow.excluded.packagers        = Excludovane packagers: {}
+workflow.included.uploader.types   = Includovane uploaders podla typu: {}
+workflow.excluded.uploader.types   = Excludovane uploaders podla typue: {}
+workflow.included.uploader.names   = Includovane uploaders podla mena: {}
+workflow.excluded.uploader.names   = Excludovane uploaders podla mena: {}
+workflow.included.downloader.types = Includovane downloaders podla typu: {}
+workflow.excluded.downloader.types = Excludovane downloaders podla typu: {}
+workflow.included.downloader.names = Includovane downloaders podla men: {}
+workflow.excluded.downloader.names = Excludovane downloaders podla mena: {}
 
 ERROR_unexpected_article_announcer   = Neocakavana chyba pri priprave {}
 # no not translate article
-announcer.article.resolve.templates  = resolving templates for article announcer
-announcer.article.eval.template      = evaluating template {}
-announcer.article.write.template     = writing template {}
-ERROR_unexpected_template_resolution = Unexpected error resolving templates from {}
-repository.disabled                  = pushing to {} is disabled. Skipping
-repository.setup                     = setting up repository {}
-repository.locate                    = locating repository {}
-repository.clone                     = cloning {}
-repository.commit.setup              = setting up commit
-repository.push                      = pushing to {}
-repository.commit.push               = pushing commit to remote
-ERROR_unexpected_repository_update   = Unexpected error updating {}
-repository.copy.files                = copying files from {}
-ERROR_repository_copy_files          = Could not copy files from {}
+announcer.article.resolve.templates  = resolving templates pre article announcer
+announcer.article.eval.template      = vyhodnocovanie template {}
+announcer.article.write.template     = zapisovanie template {}
+ERROR_unexpected_template_resolution = Neocakava chyba pri resolvovani templates z {}
+repository.disabled                  = pushuvanie do {} je disabled. Skippuje sa
+repository.setup                     = nastavenie repository {}
+repository.locate                    = lokalizacia repository {}
+repository.clone                     = klonovanie {}
+repository.commit.setup              = nastavenie commit
+repository.push                      = pushuje sa do {}
+repository.commit.push               = pushuje sa commit na remote
+ERROR_unexpected_repository_update   = Neocakavana chyba pri aktualizacii {}
+repository.copy.files                = kopirovanie suborov z {}
+ERROR_repository_copy_files          = Nepodarilo sa skopirovat subory z {}
 
 uploader.uploading.to          = uploaduje sa na {}
 downloader.unpack              = unpackuje sa {}
@@ -480,17 +480,17 @@ ERROR_unexpected_download_from = Neocakavana chyba pri stahovani z {}
 ERROR_unexpected_download      = Neocakavana chyba pri stahovani {}
 ERROR_download_url_unpack      = Neocakavana chyba pri unpackingu {}
 
-artifacts.no.match         = No matching artifacts. Skipping
-ERROR_unexpected_upload    = Unexpected error when uploading {}
-ERROR_unexpected_upload_to = Unexpected error when uploading to {}
+artifacts.no.match         = Ziadne zhodujuce sa artifacts. Skippuje sa
+ERROR_unexpected_upload    = Neocakavana chyba pocas uploadingu {}
+ERROR_unexpected_upload_to = Neocakavana chyba pocas uploadingu na {}
 generic.git.warning        = Releasing to a generic Git repository is not supported
 changelog.disabled                      = Changelog nie je povoleny. Skippuje sa
-changelog.generator.resolve.commits     = resolving commits
-changelog.generator.sort.commits        = sorting commits {}
-changelog.generator.lookup.tag          = looking for tag that matches '{}'
-changelog.generator.lookup.previous.tag = looking for previous tag '{}'
-changelog.generator.lookup.matching.tag = looking for tags that match '{}', excluding '{}'
-changelog.generator.lookup.before.tag   = looking for a tag before '{}' that matches '{}'
+changelog.generator.resolve.commits     = resolvuju sa commity
+changelog.generator.sort.commits        = zotriedzuju sa commity {}
+changelog.generator.lookup.tag          = hlada sa tag, ktory matchuje '{}'
+changelog.generator.lookup.previous.tag = hlada sa predchadzajuci tag '{}'
+changelog.generator.lookup.matching.tag = hladaju sa taggy ktore matchuju '{}', okrem '{}'
+changelog.generator.lookup.before.tag   = hlada sa tag pred tym '{}' ktory matchuje '{}'
 changelog.generator.tag.found           = najdeny tag {}
 changelog.generator.generate            = Generuje sa changelog: {}
 changelog.generator.read                = Cita sa changelog z {}
