chore: translation of Messages_sk.properties

--- a/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
+++ b/core/jreleaser-utils/src/main/resources/org/jreleaser/bundle/Messages_sk.properties
@@ -167,66 +167,66 @@ downloaders.downloader.excluded         = Downloader {}:{} bol vyluceny. Skippuj
 downloaders.downloader.disabled         = Downloader {}:{} nie je povoleny. Skippuje sa
 ERROR_unsupported_downloader            = Nepodporovany downloader {}
 
-packager.publish.snapshot.not.supported = publication of snapshots is not allowed. Skippuje sa.
-packager.create.properties              = creating props for {}/{}
-packager.skip.distribution              = skipping {} distribution
-ERROR_copy_files_from_to                = Could not copy files from {} to {}
-ERROR_unexpected_copy_files_from_to     = Unexpected error when copying files from {} to {}
-packager.no.matching.artifacts          = no suitable artifacts found in distribution {} to be packaged with {}
-packager.fill.distribution.properties   = filling distribution properties into props
-packager.fill.git.properties            = filling git properties into props
-packager.fill.artifact.properties       = filling artifact properties into props
-packager.fill.packager.properties       = filling packager properties into props
-packager.resolve.templates              = resolving templates for {}/{}
-packager.skipped.template               = skipping template {} for {}/{}
-packager.evaluate.template              = evaluating template {} for {}/{}
-packager.write.template                 = writing template {} for {}/{}
-packager.write.file                     = writing file {} for {}/{}
+packager.publish.snapshot.not.supported = publication snapshotov nieje povolena. Skippuje sa.
+packager.create.properties              = vytvaraju sa props pre {}/{}
+packager.skip.distribution              = skippuje sa {} distribution
+ERROR_copy_files_from_to                = Neporadilo sa skopirovat subory z {} downloaders {}
+ERROR_unexpected_copy_files_from_to     = Neocakavana chyba pri kopirovani suborov z {} do {}
+packager.no.matching.artifacts          = ziadne vhodne artifacts neboli najdene distribution {} ktore by boli packaged s {}
+packager.fill.distribution.properties   = naplnaju sa distribution properties do props
+packager.fill.git.properties            = naplnaju sa git properties do props
+packager.fill.artifact.properties       = naplnaju sa artifact properties do props
+packager.fill.packager.properties       = naplnaju sa packager properties do props
+packager.resolve.templates              = resolvuju sa templates pre {}/{}
+packager.skipped.template               = skippuje sa template {} pre {}/{}
+packager.evaluate.template              = evaluje sa template {} pre {}/{}
+packager.write.template                 = zapisovanie template {} pre {}/{}
+packager.write.file                     = zapisovanie suboru {} pre {}/{}
 packager.copy.license                   = kopiruju sa license subory
 
-ERROR_brew_multiplatform_artifacts       = There are no matching multi-platform binaries
+ERROR_brew_multiplatform_artifacts       = Neexistuju ziadne zhodne multi-platform binaries
 ERROR_packager_requires_platform         = musi bezat na {}
 ERROR_packager_excludes_platform         = nemoze bezat na {}
-ERROR_chocolatey_nuget_not_found         = Did not find *.nupkg at {}
-dryrun.set                               = dry-run is set to true. Skipping
-docker.no.registries                     = no configured registries. Skipping
-docker.login                             = login into {}{}
-docker.tag                               = tagging {} as {}
-docker.push                              = pushing {} to {}{}
-docker.logout                            = logout from {}{}
-sdkman.no.artifacts.match                = Artifact {} is not suitable for Sdkman publication. Skipping
-sdkman.artifact.explicit.skip            = Artifact {} is explicitly skipped
-sdkman.platform.replacement              = Platform {}: {} will replace {}
-sdkman.platform.unsupported              = Sdkman does not support platform {}
-sdkman.publish.major                     = publishing major release of '{}' candidate
-sdkman.publish.minor                     = publishing minor release of '{}' candidate
-ERROR_project_no_license_url             = Project does not define a value for licenseUrl
+ERROR_chocolatey_nuget_not_found         = Nenasiel sa *.nupkg v {}
+dryrun.set                               = dry-run je nastaveny na true. Skippuje sa
+docker.no.registries                     = ziadne nakonfigurovane registries. Skippuje sa
+docker.login                             = login do {}{}
+docker.tag                               = tagguje sa {} ako {}
+docker.push                              = pushuje sa {} do {}{}
+docker.logout                            = odhlasenie z {}{}
+sdkman.no.artifacts.match                = Artifact {} nie je vhodny pre Sdkman publikaciu. Skippuje sa
+sdkman.artifact.explicit.skip            = Artifact {} je explicitne skipped
+sdkman.platform.replacement              = Platforma {}: {} nahradi {}
+sdkman.platform.unsupported              = Sdkman nepodporuje platformu {}
+sdkman.publish.major                     = publishuje sa major release od '{}' kandidata
+sdkman.publish.minor                     = publishuje sa minor release od '{}' kandidata
+ERROR_project_no_license_url             = Projekt nedefinuje value pre licenseUrl
 
 tool.cached                              = cached {}
-tool.located                             = located {}
-tool.downloading                         = downloading {}
-tool.downloaded                          = downloaded {} successfully
-tool.unpacked                            = unpacked {}
+tool.located                             = umiestnene {}
+tool.downloading                         = stahuje sa {}
+tool.downloaded                          = stiahnute {} uspesne
+tool.unpacked                            = rozbalene {}
 tool.not.found                           = {} nenajdeny
-tool.download.error                      = {} could not be downloaded/copied
+tool.download.error                      = {} nepodarilo sa stiahnut/skopirovat
 
-tool_verify_error                          = Could not verify {} {}. Skipping
-tool_unavailable                           = {} is not available. Skipping
-cosign.generated.keys.at                   = Generated cosign key pair at {}
-WARN_cosign_password_does_not_match        = cosign password does not match
-ERROR_unexpected_generate_key_pair         = Unexpected error generating key pair
+tool_verify_error                          = Nepodarilo sa overit {} {}. Skippuje sa
+tool_unavailable                           = {} nie je k dispozicii. Skippuje sa
+cosign.generated.keys.at                   = Generuje sa cosign key par v {}
+WARN_cosign_password_does_not_match        = cosign passwordy sa nezhoduju
+ERROR_unexpected_generate_key_pair         = Neocakavana chyba pri generovani key pair
 assembler.fill.assembler.properties        = filling assembler properties into props
 ERROR_unexpected_error_writing_file        = Neocakavana chyba pri zapisovani do {}
 ERROR_command_execution_exit_value         = Chyba vykonavania commandu. exitValue = {}
 assembler.jlink.jdk                        = jdk verzia je {} {}
 assembler.jlink.target                     = target verzia je {} {}
 ERROR_jlink_target_not_compatible          = Target JDK {} nie je kompatibilne s {}
-assembler.copy.jars                        = copying JARs to {}
-assembler.copy.files                       = copying files to {}
-ERROR_assembler_delete_archive             = Could not delete previous archive {}
+assembler.copy.jars                        = kopirovanie JARs do {}
+assembler.copy.files                       = kpirovanie suborov do {}
+ERROR_assembler_delete_archive             = Nepodarilo sa odstranit predchadzajuce archive {}
 assembler.resolved.module.names            = resolved moduleNames: {}
 assembler.module.names                     = moduleNames: {}
-ERROR_assembler_no_module_names            = Nepodarilo sa vyriesit nazvy suborov
+ERROR_assembler_no_module_names            = Nepodarilo sa resolvovat nazvy suborov
 ERROR_assembler_jdeps_error                = Pri vykonavani sa vyskytla chyba jdeps:\n{}
 ERROR_assembler_delete_dir                 = Nepodarilo sa odstranit {}
 ERROR_assembler_delete_image               = Neporadilo sa odstranit predchadazuje image {}
@@ -298,7 +298,7 @@ validation_distributions_java            = {} je nastaveny na {} ale ani {} ani 
 validation_distributions_multiple        = {} ma viac ako jeden artefakt {} platforma pre extension {}
 validation_distributions_java_types      = {} musi byt validny typ Java distribucie typu, jeden z [{}]
 # do no translate distribution.{}.artifact[{}].platform
-validation_distributions_platform        = distribution.{}.artifact[{}].platform ({}) is not supported. \
+validation_distributions_platform        = distribution.{}.artifact[{}].platform ({}) nepodporuje. \
   Please use `${name}` or `${name}-${arch}` from{}       name = {}{}       arch = {}
 # keep these spaces ----------------------------->       <--------->       <------->
 # do not translate distribution., platform
@@ -325,19 +325,19 @@ validation_jlink_jdk_platform            = jlink.{} definuje JDKs bez platformy
 # do not translate jlink.
 validation_jlink_jdk_multiple_platforms  = jlink.{} ma viac ako jedno JDKs pre {}
 # do no translate jlink.{}.targetJdk[{}].platform
-validation_jlink_platform                = jlink.{}.targetJdk[{}].platform ({}) is not supported. \
+validation_jlink_platform                = jlink.{}.targetJdk[{}].platform ({}) nepodporuje. \
   Please use `${name}` or `${name}-${arch}` from{}       name = {}{}       arch = {}
 # keep these spaces ----------------------------->       <--------->       <------->
 # do not translate nativeImage., platform
 validation_nativeimage_jdk_platform      = nativeImage.{} definuje JDKs bez platformy
 # do not translate nativeImage.
-validation_nativeimage_jdk_multiple_platforms = nativeImage.{} has more than one JDK for {}
+validation_nativeimage_jdk_multiple_platforms = nativeImage.{} ma viac ako jedno JDK pre {}
 # do no translate nativeImage.{}.graalJdk[{}].platform
-validation_nativeimage_platform          = nativeImage.{}.graalJdk[{}].platform ({}) is not supported. \
+validation_nativeimage_platform          = nativeImage.{}.graalJdk[{}].platform ({}) nepodporuje. \
   Please use `${name}` or `${name}-${arch}` from{}       name = {}{}       arch = {}
 # keep these spaces ----------------------------->       <--------->       <------->
 # do no translate jpackage.{}.runtimeImage[{}].platform
-validation_jpackage_platform             = jpackage.{}.runtimeImage[{}].platform ({}) is not supported. \
+validation_jpackage_platform             = jpackage.{}.runtimeImage[{}].platform ({}) nepodporuje. \
   Please use `${name}` or `${name}-${arch}` from{}       name = {}{}       arch = {}
 # keep these spaces ----------------------------->       <--------->       <------->
 # do not translate jpackage., jlink, runtimeImage
